Add under construction page with newsletter signup and dynamic styling

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ public/images/**/*.ico
 public/images/**/*.bmp
 public/images/**/*.tiff
 public/images/**/*.ico
+public/images/**/*.xcf
 
 # Environment files
 .env
