--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cra-template": "1.2.0",
+    "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.358.0",
@@ -20,13 +21,11 @@
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
     "vm-browserify": "^1.1.2",
     "web-vitals": "^4.2.4",
-    "winston": "^3.17.0",
-    "dompurify": "^3.2.4"
+    "winston": "^3.17.0"
   },
   "scripts": {
     "start": "craco start",
@@ -57,6 +56,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "autoprefixer": "^10.4.20",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "eslint": "^8.57.1",
@@ -67,10 +67,12 @@
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.0",
     "util": "^0.12.5"
   }
 }
