--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "@types/babel__core": "^7.20.5",
     "autoprefixer": "^10.4.20",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
