--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.2.1",
@@ -68,6 +68,7 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "webpack-cli": "^6.0.1"
   }
 }
