Migrate ESLint configuration to ES module with comprehensive project linting rules
- Create new eslint.config.js with ES module support
- Configure linting rules for React, React Hooks, and Prettier
- Add global environment configurations for browser, test, server, and config files
- Update GitHub workflow to use new ES module ESLint configuration

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -11,12 +11,12 @@ name: ESLint
 
 on:
   push:
-    branches: [ "development" ]
+    branches: ["development"]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "development" ]
+    branches: ["development"]
   schedule:
-    - cron: '40 20 * * 3'
+    - cron: "40 20 * * 3"
 
 jobs:
   eslint:
@@ -39,7 +39,7 @@ jobs:
         env:
           SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
         run: npx eslint .
-          --config eslint.config.cjs
+          --config eslint.config.js
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
